--- a/Views/OptionsWindow.xaml
+++ b/Views/OptionsWindow.xaml
@@ -27,6 +27,7 @@
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
             </Grid.RowDefinitions>
             <CheckBox Grid.Row="0" Content="Otwieraj okno podglądu przed nauką" IsChecked="{Binding ShowPreview}" VerticalAlignment="Center" Margin="5 0"/>
             <CheckBox Grid.Row="1" Content="Ukryj pierwszą kolumnę podglądu zestawu" IsChecked="{Binding HideFirst}" VerticalAlignment="Center" 
@@ -36,6 +37,7 @@
             <CheckBox Grid.Row="4" Content="Otwieraj okno statystyk" IsChecked="{Binding ShowStatistics}" VerticalAlignment="Center" 
                       Margin="5 0"/>
             <CheckBox Grid.Row="5" Content="Używaj tablicy znaków specjalnych" IsChecked="{Binding SpecialCharactersMode}" VerticalAlignment="Center" Margin="5 0"/>
+            <CheckBox Grid.Row="6" Content="Zezwalaj na podpowiedzi pierwszej litery" IsChecked="{Binding AllowHints}" VerticalAlignment="Center" Margin="5 0"/>
         </Grid>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
