Okno edycji i sprawdzanie aktualizacji poprawki
modifikacje okna edycji
- enter przenosi do pierwszej kolumny nowego wiersza
- można usuwac wiersze
- przy zapisie usuwane są puste pary

Sprawdzanie aktualizacji:
- można wczytać config z starego programu pryz pomocy importu
- dodano usuwanie komunikatu o nowej wersji gdy już raz się pojawi

--- a/Views/AddOrEditWindow.xaml
+++ b/Views/AddOrEditWindow.xaml
@@ -26,12 +26,14 @@
                       RowHeaderWidth="5" 
                       SelectionMode="Single" 
                       AutoGenerateColumns="False" 
+                      PreviewKeyDown="DataGrid_PreviewKeyDown"
+                      CanUserDeleteRows="True"
                       CanUserAddRows="True">
-                <DataGrid.ContextMenu>
+                <!--<DataGrid.ContextMenu>
                     <ContextMenu>
                         <MenuItem Header="Czytaj" Command="{Binding ListenCommand}"/>
                     </ContextMenu>
-                </DataGrid.ContextMenu>
+                </DataGrid.ContextMenu>-->
                 <DataGrid.Resources>
                     <Style TargetType="DataGridColumnHeader">                        
                         <Setter Property="HorizontalContentAlignment" Value="Center"/>
