- added SaveLog to storage information about finished tests - added display format for date v1.3.0

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -42,7 +42,7 @@
                     <DataGridTextColumn MinWidth="50" IsReadOnly="True" Header="Słówka" Binding="{Binding Words.Count}"/>
                     <DataGridTextColumn MinWidth="50" IsReadOnly="True" Header="Nauka" Binding="{Binding Exercises}"/>
                     <DataGridTextColumn MinWidth="50" IsReadOnly="True" Header="Sprawdziany" Binding="{Binding Tests}"/>
-                    <DataGridTextColumn Width="100" IsReadOnly="True" Header="Ostatnia nauka" Binding="{Binding LastUse}"/>
+                    <DataGridTextColumn Width="100" IsReadOnly="True" Header="Ostatnia nauka" Binding="{Binding LastUse, StringFormat=\{0:dd.MM.yyyy HH:mm:ss\}}"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
