- add dayGoal to status and options

--- a/Views/OptionsWindow.xaml
+++ b/Views/OptionsWindow.xaml
@@ -29,6 +29,7 @@
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="20"/>
+                <RowDefinition Height="20"/>
             </Grid.RowDefinitions>
             <CheckBox Grid.Row="0" Content="Otwieraj okno podglądu przed nauką" IsChecked="{Binding ShowPreview}" VerticalAlignment="Center" Margin="5 0"/>
             <CheckBox Grid.Row="1" Content="Ukryj pierwszą kolumnę podglądu zestawu" IsChecked="{Binding HideFirst}" VerticalAlignment="Center" 
@@ -40,6 +41,8 @@
             <CheckBox Grid.Row="5" Content="Używaj tablicy znaków specjalnych" IsChecked="{Binding SpecialCharactersMode}" VerticalAlignment="Center" Margin="5 0"/>
             <CheckBox Grid.Row="6" Content="Zezwalaj na podpowiedzi pierwszej litery" IsChecked="{Binding AllowHints}" VerticalAlignment="Center" Margin="5 0"/>
             <CheckBox Grid.Row="7" Content="Pokaż informację o nowej wersji programu" IsChecked="{Binding ShowNewVersionInfo}" VerticalAlignment="Center" IsEnabled="{Binding ShowNewVersionInfoVisibility}" Margin="5 0" ToolTip="Opcja dostępna po pojawieniu się nowszej wersji programu."/>
+            <CheckBox Grid.Row="8" Content="Dzienny cel słówek:" IsChecked="{Binding DayGoalActive}" Margin="5 0" VerticalAlignment="Center"/>
+            <TextBox Grid.Row="8" Text="{Binding DayGoal}" HorizontalContentAlignment="Right" Width="40px" Margin="50 0 0 0" IsEnabled="{Binding DayGoalActive}"/>
         </Grid>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
