--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -21,25 +21,31 @@
                         <Setter Property="VerticalContentAlignment" Value="Center"/>
                     </Style>
                 </StackPanel.Resources>-->
+                <Button Command="{Binding GoBackCommand}" Grid.Column="1" Margin="2 2 5 2" Padding="4 0" IsEnabled="{Binding GoBackEnabled}" Content="..."/>
                 <Button Width="100" Content="Nauka" Command="{Binding ExerciseCommand}" IsEnabled="{Binding WordSetIsSelected}"/>
+                <Button Width="100" Content="Sprawdzian" Command="{Binding TestCommand}" IsEnabled="{Binding WordSetIsSelected}"/>
                 <Button Width="80" Content="Dodaj" Command="{Binding AddCommand}"/>
                 <Button Width="80" Content="Edytuj" Command="{Binding EditCommand}" IsEnabled="{Binding WordSetIsSelected}"/>
                 <Button Width="80" Content="Usuń" Command="{Binding DeleteCommand}" IsEnabled="{Binding WordSetIsSelected}"/>
-                <Button Width="100" Content="Sprawdzian" Command="{Binding TestCommand}" IsEnabled="{Binding WordSetIsSelected}"/>
+                
             </StackPanel>
         </Grid>
         <Grid Grid.Row="1">
             <DataGrid RowHeaderWidth="0" CanUserResizeRows="False" ItemsSource="{Binding CurrentWordSetList.ChildWordSets}" SelectedItem="{Binding SelectedWordSet}" AllowDrop="True" SelectionMode="Extended" AutoGenerateColumns="False" CanUserAddRows="False" Margin="5" Name="wordSetDataGrid">
                 <DataGrid.ContextMenu>
-                    <ContextMenu>
+                    <ContextMenu>                        
+                        <MenuItem Header="Otwórz grupę" Command="{Binding OpenWordSetGroupCommand}" ToolTip="Otwiera grupę zestawów słów"/>
+                        <MenuItem Header="Wróć wyżej" Command="{Binding GoBackCommand}" ToolTip="Przechodzi do wcześniejszej listy"/>
+                        <MenuItem Header="Wyciąg zestaw" Command="{Binding BringOutCommand}" ToolTip="Wyciąga zestaw do nadrzędnej grupy"/>
+                        <Separator/>
                         <MenuItem Header="Statystyki" Command="{Binding ShowStatisticsCommand}" ToolTip="Wyświetla okno z statystykami wybranego zestawu słówek." IsEnabled="{Binding WordSetIsSelected}"/>
+                        <Separator/>
                         <MenuItem Header="Import" Command="{Binding ImportCommand}" ToolTip="Wczytuje nowy zestaw z pliku tekstowego"/>
                         <MenuItem Header="Importuj ze schowka" Command="{Binding ImportClipboardCommand}" ToolTip="Wczytuje nowy zestaw z schowka windows"/>
                         <MenuItem Header="Eksport" Command="{Binding ExportCommand}" ToolTip="Zapisuje zestaw do pliku tekstowego." IsEnabled="{Binding WordSetIsSelected}"/>
-                        <MenuItem Header="Otwórz grupę" Command="{Binding OpenWordSetGroupCommand}" ToolTip="Otwiera grupę zestawów słów"/>
-                        <MenuItem Header="Wróć wyżej" Command="{Binding GoBackCommand}" ToolTip="Przechodzi do wcześniejszej listy"/>
-                        <MenuItem Header="Wyciąg zestaw" Command="{Binding BringOut}" ToolTip="Wyciąga zestaw do nadrzędnej grupy"/>
-                        
+                        <!--<MenuItem Header="" IsEnabled="False"/>-->
+                        <Separator />
+                        <MenuItem Header="Usuń" Command="{Binding DeleteCommand}" ToolTip="Usuwa zestaw słów." IsEnabled="{Binding WordSetIsSelected}"/>
                     </ContextMenu>
                 </DataGrid.ContextMenu>
                 <DataGrid.Columns>
@@ -47,21 +53,21 @@
                     <DataGridTextColumn MinWidth="50" IsReadOnly="True" Header="Słówka" Binding="{Binding Words.Count}"/>
                     <DataGridTextColumn MinWidth="50" IsReadOnly="True" Header="Nauka" Binding="{Binding Exercises}"/>
                     <DataGridTextColumn MinWidth="50" IsReadOnly="True" Header="Sprawdziany" Binding="{Binding Tests}"/>
-                    <DataGridTextColumn Width="100" IsReadOnly="True" Header="Ostatnia nauka" Binding="{Binding LastUse, StringFormat=\{0:dd.MM.yyyy HH:mm:ss\}}"/>
+                    <DataGridTextColumn Width="100" IsReadOnly="True" Header="Ostatnia nauka" Binding="{Binding LastUse, StringFormat=\{0:dd.MM.yyyy HH:mm:ss\}}" />
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="7*"/>
-                <ColumnDefinition Width="1*"/>
+                <!--<ColumnDefinition Width="1*"/>-->
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" HorizontalAlignment="Stretch">
                 <TextBlock Text="{Binding StatusText}" VerticalAlignment="Center"/>
             </Label>            
-            <Button Command="{Binding GoBackCommand}" Grid.Column="1" Margin="2 2 5 2" Padding="4 0" Content="..."/>
+            
             <Button Command="{Binding OptionsWindowCommand}" Grid.Column="2" Margin="2 2 5 2" Padding="4 0" Content="Opcje"/>
             <Button Command="{Binding AboutWindowCommand}" Grid.Column="3" Margin="2 2 5 2" Padding="4 0" Content="O programie"/>
         </Grid>
